# todo-app-backend

./: .gitignore  Procfile  pyproject.toml  requirements.txt
todo_practice1/: db.sqlite3  manage.py
todo_practice1/todo/: admin.py  models.py  serializers.py  views.py
todo_practice1/todo/migrations/: 0001_initial.py  0002_project_task_delete_todo.py  0003_project_user_task_user.py  0004_remove_task_completed_task_background_and_more.py  0005_task_end_time_task_start_time.py  0006_alter_task_start_time.py  0007_alter_task_start_time.py  0008_remove_project_description_project_tree_data_and_more.py  0009_alter_task_tag.py  0010_alter_task_tag.py  0011_remove_task_tag_tab_task_tab_delete_tag.py  0012_remove_task_end_time_remove_task_start_time_and_more.py  0013_alter_task_status.py  0014_task_actual_work_time.py
todo_practice1/todo_practice1/: asgi.py  settings.py  urls.py  wsgi.py
